added pagination to the products and chart for top sellers

--- a/src/components/Table/tables.module.css
+++ b/src/components/Table/tables.module.css
@@ -65,3 +65,7 @@ tbody tr:nth-child(odd) td{
     background-color: white;
     border: 1px solid pink;
 }
+
+.pagination_container{
+    padding-left: 10px;
+}
