--- a/src/components/Loading/loading.module.css
+++ b/src/components/Loading/loading.module.css
@@ -1,8 +1,10 @@
 .loading{
     display: flex;
     flex-direction: column;
+    height: 100vh;
     justify-content: center;
+    align-items: center;
 }
 .loading img{
-
+    max-width: 500px;
 }
