--- a/src/pages/Models/models.module.css
+++ b/src/pages/Models/models.module.css
@@ -56,7 +56,7 @@
     display: none;
 }
 
-.submit_btn{
+.submit_btn, .reset{
     width: 100%;
     border: 0;
     outline: 0;
@@ -66,6 +66,10 @@
     font-size: 17px;
     cursor: pointer;
     transition: 0.3s all linear;
+}
+
+.reset{
+    background-color: #ff6;
 }
 
 .submit_btn:hover{
@@ -179,3 +183,4 @@
     display: flex;
     gap: 20px;
 }
+
