--- a/src/components/Table/tables.module.css
+++ b/src/components/Table/tables.module.css
@@ -69,3 +69,10 @@ tbody tr:nth-child(odd) td{
 .pagination_container{
     padding-left: 10px;
 }
+
+.sortBtn{
+    display: flex;
+    justify-content: center;
+    gap: 8px;
+    cursor: pointer;
+}
